Changed the address to a fictional one

--- a/contact us.html
+++ b/contact us.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>Contact us</h1>
-    <p>Kiryat Motzqin</p>
-    <p>Kadish Luz 74</p>
-    <p>052-6377826</p>
+    <p>Haifa</p>
+    <p>Haifa</p>
+    <p>052-2222222</p>
     <hr>
     <form action="mailto:yurilapigin1996@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
