--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </tr>
       <tr>
         <td>2020-2022</td>
-        <td>Practical Electronics Engineer at Rafael Advanced Defence Systems</td>
+        <td>Practical Electronics Engineer</td>
       </tr>
     </tbody>
   </table>
